[package]
name = "easy-move"
version = "0.1.0"
authors = ["Christofer Berruz <cberruzc@my.bridgeport.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"